# dip

diploma_project/: .env
diploma_project/todolist/: docker-compose.yaml  requirements.txt
diploma_project/todolist/core/: serializers.py  views.py
diploma_project/todolist/deploy/: .env  docker-compose-ci.yaml  docker-compose.yaml
diploma_project/todolist/postgres_data/: postmaster.pid
diploma_project/todolist/postgres_data/base/1/: pg_internal.init
diploma_project/todolist/postgres_data/base/16384/: 1247  1249  1259  16389  16390  16395  16397  16398  16401  16403  16405  16406  16409  16411  16415  16417  16419  16425  16432  16433  16446  16451  16457  16467  16471  16474  16486  16488  16500  16502  16509  16522  16527  2224  24577  24578  24583  24585  24586  24589  (+46 more)
diploma_project/todolist/postgres_data/base/5/: pg_internal.init
diploma_project/todolist/postgres_data/global/: 1260  pg_control  pg_internal.init
diploma_project/todolist/postgres_data/pg_stat/: pgstat.stat
diploma_project/todolist/todolist/: settings.py  urls.py
todolist-dev_34/: .dockerignore  .env  .env.template  Dockerfile  Dockerfile.prod  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
todolist-dev_34/.github/workflows/: build_and_push_except_main.yaml  deploy_on_main.yaml
todolist-dev_34/core/: admin.py  apps.py  models.py
todolist-dev_34/core/migrations/: 0001_custom_user_model.py
todolist-dev_34/deploy/: docker-compose.yaml
todolist-dev_34/todolist/: settings.py
