[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["AgeHT <vladimir.e.pavlov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
envparse = "^0.2.0"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
